# 1MGame2022

./: .gitignore  .gitmodules  CMakeLists.txt  EngineUseNote.md  ReadMe.md  TODO.md
3rdlibs/glad/include/glad/: glad.h
3rdlibs/glad/src/: glad.c
3rdpart/glad/: CMakeLists.txt
3rdpart/glad/include/glad/: glad.h
3rdpart/glad/src/: glad.c
3rdpart/imgui/: CMakeLists.txt
3rdpart/miniaudio/: CMakeLists.txt
3rdpart/stb/: CMakeLists.txt
binding/lua/: CMakeLists.txt  bridge.c  executor.c  hazel_bind.lua  main.lua
binding/lua/executor/: CMakeLists.txt  executor.c
cmake/: FindGLAD.cmake  FindGLFW.cmake  FindLua.cmake  FindSTB.cmake
game/: HowToPlay.txt  TODO.md  animation.lua  config.lua  constants.lua  content.lua  ecs.lua  hazel.lua  helpfunc.lua  main.lua  timer.lua  vmath.lua
hazel/: dllexport.h  glhelper.h  hazel.h  log.h  pch.h  renderer.h  sound.h  texture.h  window.h
include/game/: drawable.hpp  entity.hpp  image.hpp  transform.hpp
include/gui/: gui.hpp
include/te/: animation.hpp  engine.hpp  event_dispatcher.hpp  glbuffer.hpp  glhelp.hpp  image.hpp  key.hpp  layer.hpp  log.hpp  mathf.hpp  mouse.hpp  pch.hpp  renderer.hpp  scence.hpp  shader.hpp  storage.hpp  texture.hpp  tilesheet.hpp  timer.hpp  vertex.hpp  vertex_array.hpp
shader/: shader.frag  shader.vert
src/: glhelper.c  hazel.c  log.c  renderer.c  sound.c  texture.c  window.c
src/game/: entity.cpp  image.cpp  main.cpp
src/gui/: gui.cpp
src/te/: animation.cpp  engine.cpp  event_dispatcher.cpp  glbuffer.cpp  glhelp.cpp  image.cpp  key.cpp  layer.cpp  mathf.cpp  mouse.cpp  renderer.cpp  scence.cpp  shader.cpp  texture.cpp  tilesheet.cpp  timer.cpp  vertex_array.cpp
test/: CMakeLists.txt  main.c
tools/: CMakeLists.txt  gui.cpp  main.cpp
